--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -27,12 +27,14 @@
         <div class="card-body p-0 collapse show">
             <div class="p-3">
                 <a  class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-mobile-alt text-muted mr-2"></i> {{ telefono }}</a>
+                    <i class="fas fa-mobile-alt text-muted mr-2"></i> {{telefono}}</a>
                 <a class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-address-card text-muted mr-2"></i> {{ identificacion }}</a>
+                    <i class="fas fa-address-card text-muted mr-2"></i> {{identificacion}}</a>
                 <a href="mailto: {{ correo }}" class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-envelope text-muted mr-2"></i> {{ correo }}</a>
-                <address class=" text-muted"><i class="fas fa-map-pin mr-2"></i> {{ direccion }}</address>
+                    <i class="fas fa-envelope text-muted mr-2"></i> {{correo }}</a>
+                <a  class="mt-1 d-block fs-sm fw-400 text-dark">
+                    <i class="fas fa-tint text-muted mr-2"></i> {{grupo_sanguineo }}</a>
+                <address class=" text-muted"><i class="fas fa-map-pin mr-2"></i> {{direccion }}</address>
             </div>
         </div>
     </div>
