--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -95,119 +95,7 @@
     <script src="{% static 'Proyectos/js/Contratos/confirmarEliminarContrato.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
-        <!-- datatbles buttons bundle contains:
-    + "jszip.js",
-    + "pdfmake.js",
-    + "vfs_fonts.js"
-    NOTE: 	The file size is pretty big, but you can always use the
-            build.json file to deselect any components you do not need under "export" -->
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
-        <script>
-            $(document).ready(function()
-            {
-                 let columnasExportar = [0, 1,3, 4, 6, 9, 12, 13];
-
-                // initialize datatable
-                $('#dataTable').dataTable(
-                {
-
-                    responsive: true,
-                    lengthChange: false,
-                    dom:
-
-                        /*	--- Layout Structure
-                            --- Options
-                            l	-	length changing input control
-                            f	-	filtering input
-                            t	-	The table!
-                            i	-	Table information summary
-                            p	-	pagination control
-                            r	-	processing display element
-                            B	-	buttons
-                            R	-	ColReorder
-                            S	-	Select
-
-                            --- Markup
-                            < and >				- div element
-                            <"class" and >		- div with a class
-                            <"#id" and >		- div with an ID
-                            <"#id.class" and >	- div with an ID and a class
-
-                            --- Further reading
-                            https://datatables.net/reference/option/dom
-                            --------------------------------------
-                         */
-                        "<'row mb-3'<'col-sm-12 col-md-6 d-flex align-items-center justify-content-start'f><'col-sm-12 col-md-6 d-flex align-items-center justify-content-end'lB>>" +
-                        "<'row'<'col-sm-12'tr>>" +
-                        "<'row'<'col-sm-12 col-md-5'i><'col-sm-12 col-md-7'p>>",
-                    buttons: [
-                        /*{
-                            extend:    'colvis',
-                            text:      'Column Visibility',
-                            titleAttr: 'Col visibility',
-                            className: 'mr-sm-3'
-                        },*/
-                        {
-                            extend: 'pdfHtml5',
-                            text: 'PDF',
-                            className: 'btn-outline-danger btn-sm mr-1',
-                             exportOptions: {
-                            columns: columnasExportar,
-                          },
-
-                        },
-                        {
-                            extend: 'excelHtml5',
-                            text: 'Excel',
-                            className: 'btn-outline-success btn-sm mr-1',
-                            exportOptions: {
-                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
-
-                          },
-                        },
-                        {
-                            extend: 'csvHtml5',
-                            text: 'CSV',
-                            className: 'btn-outline-primary btn-sm mr-1',
-                            exportOptions: {
-                            columns: columnasExportar,
-
-                          },
-
-                        },
-                        {
-                            extend: 'copyHtml5',
-                            text: 'Copiar',
-                            className: 'btn-outline-primary btn-sm mr-1',
-                            exportOptions: {
-                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
-                          },
-                        },
-                        {
-                            extend: 'print',
-                            text: 'Imprimir',
-                            className: 'btn-outline-primary btn-sm',
-                            exportOptions: {
-                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
-                          },
-                        }
-                    ],
-                     language: {
-                        buttons: {
-                            copyTitle: 'Copiado al portapapeles',
-                            copySuccess: {
-                                _: '%d líneas copiadas',
-                                1: '1 línea copiada',
-
-                            },
-                        },
-                        info: 'Mostrando contratos del _START_ al _END_ de un total de  _TOTAL_ contratos',
-
-                     }
-                });
-                $("#dataTable_filter").find("input").attr("placeholder", "Buscar");
-
-            });
-        </script>
-
-    {% endblock %}
+    <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
+    <script src="{% static 'Proyectos/js/Contratos/exportar_tabla.js' %}"></script>
+{% endblock %}
