--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -10,10 +10,12 @@
         <span class="nav-link-text" data-i18n="nav.administracion_empresas">Empresas</span>
     </a>
 </li>
-<li>
+<li style="padding-left: 15px">
     <a href="{% url 'Administracion:sub-empresas' %}" title="Sub-empresas" data-filter-tags="sub-empresas">
         <i class="far fa-sitemap"></i>
         <span class="nav-link-text" data-i18n="nav.administracion_empresas">Sub-empresas</span>
     </a>
 </li>
+
+
 
