--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -219,6 +219,10 @@
                                                                     <div class="col-md-6">
                                                                         {% select_tag rango 'rango_id' 'Seleccione un rango' texto_label="Rango" value=colaborador.rango_id required="" mensaje_validacion='Por favor seleccione un rango' invalido=errores.rango %}
                                                                     </div>
+                                                                    <input id="multiple_grupos"  hidden value="{{ grupos_colaborador }}">
+                                                                    <div class="col-md-6">
+                                                                        {% select_multiple_tag grupos 'grupo_id[]' 'grupo_id' 'Seleccione un grupo' placeholder="Seleccione un grupo de permisos" texto_label="Grupo de Permisos" value="" required="" mensaje_validacion='Por favor seleccione un grupo de permisos' multiple='multiple' invalido=errores.grupo %}
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -283,12 +287,21 @@
     <script>
         $(document).ready(function () {
             $('.select2').select2();
-             $('#contrato_id').select2(
-                    {
-                        placeholder: "Seleccione un contrato"
-                    });
-             $('#contrato_id').next().find("input").css("min-width","200px");
-             $('#contrato_id').val(JSON.parse($('#multiple').val())).trigger("change");
+            $('#contrato_id').select2(
+                {
+                    placeholder: "Seleccione un contrato"
+                });
+            $('#contrato_id').next().find("input").css("min-width", "200px");
+            $('#contrato_id').val(JSON.parse($('#multiple').val())).trigger("change");
+
+            let grupo_select = $('#grupo_id');
+
+            grupo_select.select2(
+                {
+                    placeholder: "Seleccione un grupo de permisos"
+                });
+            grupo_select.next().find("input").css("min-width", "200px");
+            grupo_select.val(JSON.parse($('#multiple_grupos').val())).trigger("change");
         });
     </script>
 {% endblock scripts%}
