--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
@@ -23,12 +23,14 @@
         <div class="row">
             <div class="col-xl-12">
                 <div id="panel-1" class="panel">
+                    {% if opciones %}
                     <div class="panel-hdr">
                         <div class="col-md-10"></div>
                         <div class="col-md-2" style="float: right">
                             {% select_tag opciones 'opcion_id' '' value=opcion %}
                         </div>
                     </div>
+                    {% endif %}
                     <div class="panel-container show">
                         <div class="panel-content">
                                 <div class="panel-group">
