--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -13,12 +13,11 @@
 {% block main %}
     {% with ALIMENTACION=1 EJECUCION=2 REAL=0 PROYECCION=1 VIGENTE=1 EDITADO=2 ELIMINADO=4 %}
     <div class="panel-container show">
-        <div class="header">
-             <h1 class="header-title">
+        <div class="header p-b-10">
+            <h1 class="header-title">
                 <i class='far fa-file-alt'></i>  {% if contrato %}Contrato: {{ contrato }}{% else %}Proceso: {{ proceso }}{% endif %} - Flujo de Caja: {% if tipo == REAL %}Real{% else %}Proyección{% endif %} <span class='fw-300'></span>
-                 <br>
-                 <br>
-             </h1>
+                <a class="far far fa-times-circle"  href="javascript:history.back()" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Volver"></a>
+            </h1>
         </div>
         <div class="row">
             <div class="col-xl-12">
