--- a/Financiero/templates/Financiero/_common/menu_aplicacion.html
+++ b/Financiero/templates/Financiero/_common/menu_aplicacion.html
@@ -6,14 +6,14 @@
     </a>
 </li>
 {% endif %}
-{%  if perms.Financiero.view_subtipomovimiento %}
+{% if perms.Financiero.view_subtipomovimiento or perms.Financiero.view_categoriamovimiento or perms.TalentoHumano.view_flujos_de_caja %}
 <li {% if menu_actual|first == 'flujo_caja' %} class="active open"{% endif %}>
     <a href="#" title="Flujo de Caja" data-filter-tags="flujo caja">
         <i class="fal fa-usd-square"></i>
         <span class="nav-link-text" > Flujo de Caja</span>
     </a>
     <ul>
-        {%  if perms.Financiero.view_subtipomovimiento %}
+        {% if perms.Financiero.view_subtipomovimiento %}
         <li {% if menu_actual|last == 'subtip_movimientos' %} class="active" {% endif %}>
             <a href="{% url 'Financiero:subtipo-movimiento-index' %}" title="Subtipos de Movimientos" data-filter-tags="subtipos movimientos">
                 <i class="fal fa-window-restore"></i>
@@ -21,7 +21,7 @@
             </a>
         </li>
         {% endif %}
-        {%  if perms.Financiero.view_categoriamovimiento %}
+        {% if perms.Financiero.view_categoriamovimiento %}
         <li {% if menu_actual|last == 'categorias_movimientos' %} class="active" {% endif %}>
             <a href="{% url 'Financiero:categoria-movimiento-index' %}" title="Categorías de Movimientos" data-filter-tags="categoria movimientos">
                 <i class="fal fa-window-restore"></i>
@@ -29,11 +29,11 @@
             </a>
         </li>
         {% endif %}
-        {%  if perms.TalentoHumano.view_flujos_de_caja %}
+        {% if perms.TalentoHumano.view_flujos_de_caja %}
         <li {% if menu_actual|last == 'flujos_de_caja' %} class="active" {% endif %}>
             <a href="{% url 'Financiero:flujos-de-caja' 0 %}" title="Flujos de Caja" data-filter-tags="flujos caja">
                 <i class="fal fa-usd-square"></i>
-                <span class="nav-link-text" data-i18n="nav.Financiero_flujos_caja">Flujos de Caja</span>
+                <span class="nav-link-text" data-i18n="nav.Financiero_flujos_caja">Gestionar Flujos de Caja</span>
             </a>
         </li>
         {% endif %}
